# pollutEM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ditto_environment.yaml  pyproject.toml  requirements.txt  scripts.sh
config/: base_config.yaml  earthquakes_master.yaml  earthquakes_master_minimal.yaml  laptops_master.yaml
docs/: realistic_pollution_scenarios.md
notebooks/: dittomatcher.ipynb  polars_polluters.ipynb
pollutEM/: __init__.py  configuration_generator.py  dataset.py  evaluator.py  features.py  main.py  pipeline.py  plots.py  polluter.py
pollutEM/matchers/: __init__.py  base_matcher.py  chatgpt.py  chatgpt_matcher.py  ditto.py  ditto_matcher.py  xgboost.py  xgboost_matcher.py
pollutEM/matchers/deepmatcher/: deepmatcher.py
pollutEM/matchers/ditto/: ditto_matcher.py
pollutEM/matchers/ditto_light/: augment.py  ditto.py  knowledge.py  summarize.py
pollutEM/matching/chatgpt/: chatgpt_matcher.py
pollutEM/modeling/: predict.py  train.py
pollutEM/polluters/: __init__.py  base_polluter.py  digit_polluter.py  domain_specific_polluter.py  error_polluter.py  mathematical_polluter.py  pollution_config_generator.py  precision_polluter.py  representation_polluter.py  statistical_polluter.py
pollutEM/pollutions/: base_polluter.py
pollutEM/tests/: polluter_test.py  test_domain_specific_polluters.py  test_error_polluters.py  test_error_polluters_2.py  test_mathematical_polluters.py  test_precision_polluters.py
pollutEM/utils/: config.py  data.py  random.py  visualization.py
