[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pollutEM"
version = "0.0.1"
description = "Evaluate the performance of Entity Matching Deep Learning Models for polluted numerical data"
authors = [
  { name = "David Kuska" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["pollutEM"]
force_sort_within_sections = true
